[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.(py|pyi)$"

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "tests/*",
    "venv/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
addopts = "-ra -q --cov=./ --cov-report=term-missing"
python_files = ["test_*.py", "*_test.py"]
